在住报表修改

--- a/src/main/webapp/pre-check-out-report.html
+++ b/src/main/webapp/pre-check-out-report.html
@@ -143,7 +143,7 @@
                 , {field: 'certificateNumber', title: '证件号码', rowspan: 2}
                 , {field: 'roomName', title: '房号', rowspan: 2}
                 , {field: 'roomTypeName', title: '房型', rowspan: 2}
-                , {field: 'money', title: '当天价格', rowspan: 2, totalRow: true}
+                , {field: 'money', title: '首日房价', rowspan: 2, totalRow: true}
                 , {
                     field: 'startTime', width:180, title: '入住时间', align: 'center', templet: function (data) {
                         if (data.startTime)
