--- a/src/main/webapp/iframe_home.html
+++ b/src/main/webapp/iframe_home.html
@@ -606,7 +606,7 @@
             });
         });
 
-        //联房结账
+        //联房操作按钮
         $('#accounts').on('click', function () {
             parent.layer.open({
                 type: 2,
