--- a/src/main/webapp/iframe_member_debitCard.html
+++ b/src/main/webapp/iframe_member_debitCard.html
@@ -56,10 +56,10 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">支付方式</label>
                 <div class="layui-input-block">
-                    <input type="radio" name="type" value="现金" title="现金" checked>
-                    <input type="radio" name="type" value="刷卡" title="刷卡">
-                    <input type="radio" name="type" value="微信" title="微信">
-                    <input type="radio" name="type" value="支付宝" title="支付宝">
+                    <input type="radio" name="type" value="cash" title="现金" checked>
+                    <input type="radio" name="type" value="cart" title="刷卡">
+                    <input type="radio" name="type" value="wechat" title="微信">
+                    <input type="radio" name="type" value="alipay" title="支付宝">
                 </div>
             </div>
             <div class="layui-form-item" style="text-align: right">
