--- a/src/main/webapp/income.html
+++ b/src/main/webapp/income.html
@@ -203,7 +203,7 @@
             , title: '营收报表'
             , done: function (res, curr, count) {
                 $(".layui-table-tool-temp").html('<p style="position: relative;width:100%;text-align: center;font-weight: 600"><span style="position: absolute;left: 20px">' + DateToLStr(new Date()) + '</span>营收报表</p>');
-                $('.tab-box, th').css('font-weight', 600)
+                $('.layui-table-cell, th').css({'font-weight': 600, 'color': '#000000'})
             }
             , toolbar: true
             , cols: [[ //标题栏
