--- a/src/main/webapp/iframe_tallyInfo.html
+++ b/src/main/webapp/iframe_tallyInfo.html
@@ -57,7 +57,8 @@
             elem: '#tallyInfo'
             , limit: 10000
             , cols: [[ //表头
-                {field: 'roomName', title: '房间名', align: 'center'}
+                {type: 'checkbox', fixed: 'left'}
+                , {field: 'roomName', title: '房间名', align: 'center'}
                 , {field: 'name', title: '姓名', align: 'center'}
                 , {field: 'phone', title: '电话', align: 'center'}
             ]]
