--- a/src/main/webapp/managerReport.html
+++ b/src/main/webapp/managerReport.html
@@ -45,7 +45,7 @@
             <a href="javascript:;" id="hotelusername"></a>
             <dl class="layui-nav-child">
                 <!--<dd>-->
-                    <!--<a href="javascript:;" id="updateHotel">更换酒店</a>-->
+                <!--<a href="javascript:;" id="updateHotel">更换酒店</a>-->
                 <!--</dd>-->
                 <dd>
                     <a href="javascript:;" id="updatePass">修改密码</a>
@@ -697,6 +697,10 @@
                     "count": res.data.count, //解析数据长度
                     "data": res.data.statement //解析数据列表
                 };
+            }
+            , done: function (res, curr, count) {
+                $(".layui-table-tool-temp").html('<p style="position: relative;width:100%;text-align: center;font-weight: 600"><span style="position: absolute;left: 20px">' + DateToLStr(new Date()) + '</span>经理日报表</p>');
+                $('.layui-table-cell, th').css({'font-weight': 600, 'color': '#000000'})
             }
             , even: true
             , loading: true // 是否显示加载条
